ANTLR/ExprParser.py
# Generated from Expr.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'create_table'", "'('", "')'", "'drop_table'", 
                     "'add_column'", "'remove_column'", "','", "'int'", 
                     "'string'", "'bool'", "'date'", "'insert_into'", "'values'", 
                     "'update'", "'set'", "'delete_from'", "'select'", "'from'", 
                     "'where'", "'join'", "'on'", "'and'", "'or'", "'null'", 
                     "'='", "'*'", "'-'", "'\"'", "'\\'", "'true'", "'false'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "' '" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "IDENTIFIER", "DIGIT", "NEWLINE", "SPACE" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_create_table_statement = 2
    RULE_drop_table_statement = 3
    RULE_add_column_statement = 4
    RULE_remove_column_statement = 5
    RULE_column_def_list = 6
    RULE_column_def = 7
    RULE_data_type = 8
    RULE_insert_statement = 9
    RULE_update_statement = 10
    RULE_delete_statement = 11
    RULE_select_statement = 12
    RULE_where_clause = 13
    RULE_join_clause = 14
    RULE_condition = 15
    RULE_logical_operator = 16
    RULE_expression = 17
    RULE_value = 18
    RULE_identifier_list = 19
    RULE_value_list = 20
    RULE_assignment_list = 21
    RULE_selection = 22
    RULE_numerical_literal = 23
    RULE_string_literal = 24
    RULE_boolean_literal = 25

    ruleNames =  [ "program", "statement", "create_table_statement", "drop_table_statement", 
                   "add_column_statement", "remove_column_statement", "column_def_list", 
                   "column_def", "data_type", "insert_statement", "update_statement", 
                   "delete_statement", "select_statement", "where_clause", 
                   "join_clause", "condition", "logical_operator", "expression", 
                   "value", "identifier_list", "value_list", "assignment_list", 
                   "selection", "numerical_literal", "string_literal", "boolean_literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    IDENTIFIER=32
    DIGIT=33
    NEWLINE=34
    SPACE=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatementContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatementContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = ExprParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 52
                self.statement()
                self.state = 55 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 217202) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def create_table_statement(self):
            return self.getTypedRuleContext(ExprParser.Create_table_statementContext,0)


        def drop_table_statement(self):
            return self.getTypedRuleContext(ExprParser.Drop_table_statementContext,0)


        def add_column_statement(self):
            return self.getTypedRuleContext(ExprParser.Add_column_statementContext,0)


        def remove_column_statement(self):
            return self.getTypedRuleContext(ExprParser.Remove_column_statementContext,0)


        def insert_statement(self):
            return self.getTypedRuleContext(ExprParser.Insert_statementContext,0)


        def update_statement(self):
            return self.getTypedRuleContext(ExprParser.Update_statementContext,0)


        def delete_statement(self):
            return self.getTypedRuleContext(ExprParser.Delete_statementContext,0)


        def select_statement(self):
            return self.getTypedRuleContext(ExprParser.Select_statementContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = ExprParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 65
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.create_table_statement()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.drop_table_statement()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 59
                self.add_column_statement()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 60
                self.remove_column_statement()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 5)
                self.state = 61
                self.insert_statement()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 6)
                self.state = 62
                self.update_statement()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 7)
                self.state = 63
                self.delete_statement()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 8)
                self.state = 64
                self.select_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Create_table_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def column_def_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.Column_def_listContext)
            else:
                return self.getTypedRuleContext(ExprParser.Column_def_listContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_create_table_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreate_table_statement" ):
                listener.enterCreate_table_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreate_table_statement" ):
                listener.exitCreate_table_statement(self)




    def create_table_statement(self):

        localctx = ExprParser.Create_table_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_create_table_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(ExprParser.T__0)
            self.state = 68
            self.match(ExprParser.IDENTIFIER)
            self.state = 69
            self.match(ExprParser.T__1)
            self.state = 71 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 70
                self.column_def_list()
                self.state = 73 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==32):
                    break

            self.state = 75
            self.match(ExprParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Drop_table_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_drop_table_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDrop_table_statement" ):
                listener.enterDrop_table_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDrop_table_statement" ):
                listener.exitDrop_table_statement(self)




    def drop_table_statement(self):

        localctx = ExprParser.Drop_table_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_drop_table_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(ExprParser.T__3)
            self.state = 78
            self.match(ExprParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Add_column_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def column_def(self):
            return self.getTypedRuleContext(ExprParser.Column_defContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_add_column_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd_column_statement" ):
                listener.enterAdd_column_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd_column_statement" ):
                listener.exitAdd_column_statement(self)




    def add_column_statement(self):

        localctx = ExprParser.Add_column_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_add_column_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(ExprParser.T__4)
            self.state = 81
            self.match(ExprParser.IDENTIFIER)
            self.state = 82
            self.match(ExprParser.T__1)
            self.state = 83
            self.column_def()
            self.state = 84
            self.match(ExprParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Remove_column_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.IDENTIFIER)
            else:
                return self.getToken(ExprParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return ExprParser.RULE_remove_column_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRemove_column_statement" ):
                listener.enterRemove_column_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRemove_column_statement" ):
                listener.exitRemove_column_statement(self)




    def remove_column_statement(self):

        localctx = ExprParser.Remove_column_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_remove_column_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(ExprParser.T__5)
            self.state = 87
            self.match(ExprParser.IDENTIFIER)
            self.state = 88
            self.match(ExprParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Column_def_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column_def(self):
            return self.getTypedRuleContext(ExprParser.Column_defContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_column_def_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumn_def_list" ):
                listener.enterColumn_def_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumn_def_list" ):
                listener.exitColumn_def_list(self)




    def column_def_list(self):

        localctx = ExprParser.Column_def_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_column_def_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.column_def()
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 91
                self.match(ExprParser.T__6)
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Column_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def data_type(self):
            return self.getTypedRuleContext(ExprParser.Data_typeContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_column_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumn_def" ):
                listener.enterColumn_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumn_def" ):
                listener.exitColumn_def(self)




    def column_def(self):

        localctx = ExprParser.Column_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_column_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(ExprParser.IDENTIFIER)
            self.state = 98
            self.data_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_data_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData_type" ):
                listener.enterData_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData_type" ):
                listener.exitData_type(self)




    def data_type(self):

        localctx = ExprParser.Data_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_data_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3840) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Insert_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def identifier_list(self):
            return self.getTypedRuleContext(ExprParser.Identifier_listContext,0)


        def value_list(self):
            return self.getTypedRuleContext(ExprParser.Value_listContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_insert_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsert_statement" ):
                listener.enterInsert_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsert_statement" ):
                listener.exitInsert_statement(self)




    def insert_statement(self):

        localctx = ExprParser.Insert_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_insert_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(ExprParser.T__11)
            self.state = 103
            self.match(ExprParser.IDENTIFIER)
            self.state = 104
            self.match(ExprParser.T__1)
            self.state = 105
            self.identifier_list()
            self.state = 106
            self.match(ExprParser.T__2)
            self.state = 107
            self.match(ExprParser.T__12)
            self.state = 108
            self.match(ExprParser.T__1)
            self.state = 109
            self.value_list()
            self.state = 110
            self.match(ExprParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Update_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def assignment_list(self):
            return self.getTypedRuleContext(ExprParser.Assignment_listContext,0)


        def where_clause(self):
            return self.getTypedRuleContext(ExprParser.Where_clauseContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_update_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUpdate_statement" ):
                listener.enterUpdate_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUpdate_statement" ):
                listener.exitUpdate_statement(self)




    def update_statement(self):

        localctx = ExprParser.Update_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_update_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(ExprParser.T__13)
            self.state = 113
            self.match(ExprParser.IDENTIFIER)
            self.state = 114
            self.match(ExprParser.T__14)
            self.state = 115
            self.assignment_list()
            self.state = 116
            self.where_clause()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Delete_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def where_clause(self):
            return self.getTypedRuleContext(ExprParser.Where_clauseContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_delete_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDelete_statement" ):
                listener.enterDelete_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDelete_statement" ):
                listener.exitDelete_statement(self)




    def delete_statement(self):

        localctx = ExprParser.Delete_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_delete_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(ExprParser.T__15)
            self.state = 119
            self.match(ExprParser.IDENTIFIER)
            self.state = 120
            self.where_clause()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selection(self):
            return self.getTypedRuleContext(ExprParser.SelectionContext,0)


        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def join_clause(self):
            return self.getTypedRuleContext(ExprParser.Join_clauseContext,0)


        def where_clause(self):
            return self.getTypedRuleContext(ExprParser.Where_clauseContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_select_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_statement" ):
                listener.enterSelect_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_statement" ):
                listener.exitSelect_statement(self)




    def select_statement(self):

        localctx = ExprParser.Select_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_select_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(ExprParser.T__16)
            self.state = 123
            self.selection()
            self.state = 124
            self.match(ExprParser.T__17)
            self.state = 125
            self.match(ExprParser.IDENTIFIER)
            self.state = 126
            self.join_clause()
            self.state = 127
            self.where_clause()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Where_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(ExprParser.ConditionContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_where_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhere_clause" ):
                listener.enterWhere_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhere_clause" ):
                listener.exitWhere_clause(self)




    def where_clause(self):

        localctx = ExprParser.Where_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_where_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(ExprParser.T__18)
            self.state = 130
            self.condition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Join_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def condition(self):
            return self.getTypedRuleContext(ExprParser.ConditionContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_join_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJoin_clause" ):
                listener.enterJoin_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJoin_clause" ):
                listener.exitJoin_clause(self)




    def join_clause(self):

        localctx = ExprParser.Join_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_join_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(ExprParser.T__19)
            self.state = 133
            self.match(ExprParser.IDENTIFIER)
            self.state = 134
            self.match(ExprParser.T__20)
            self.state = 135
            self.condition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExpressionContext,i)


        def logical_operator(self):
            return self.getTypedRuleContext(ExprParser.Logical_operatorContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = ExprParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.expression()
            self.state = 138
            self.logical_operator()
            self.state = 139
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical_operatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_logical_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogical_operator" ):
                listener.enterLogical_operator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogical_operator" ):
                listener.exitLogical_operator(self)




    def logical_operator(self):

        localctx = ExprParser.Logical_operatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_logical_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            _la = self._input.LA(1)
            if not(_la==22 or _la==23):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ExprParser.IDENTIFIER, 0)

        def value(self):
            return self.getTypedRuleContext(ExprParser.ValueContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = ExprParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_expression)
        try:
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.match(ExprParser.IDENTIFIER)
                pass
            elif token in [24, 27, 28, 30, 31]:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.value()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def numerical_literal(self):
            return self.getTypedRuleContext(ExprParser.Numerical_literalContext,0)


        def string_literal(self):
            return self.getTypedRuleContext(ExprParser.String_literalContext,0)


        def boolean_literal(self):
            return self.getTypedRuleContext(ExprParser.Boolean_literalContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = ExprParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_value)
        try:
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [27]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.numerical_literal()
                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.string_literal()
                pass
            elif token in [30, 31]:
                self.enterOuterAlt(localctx, 3)
                self.state = 149
                self.boolean_literal()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 4)
                self.state = 150
                self.match(ExprParser.T__23)
                pass
            else:
                raise NoViableAltException(self)
